--- a/_config.yml
+++ b/_config.yml
@@ -69,5 +69,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:CrazyMilk/CrazyMilk.github.io.git
+  repo: git@github.com:cgoder/cgoder.github.io.git
   branch: master
