--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -211,13 +211,13 @@ highlight_theme: night eighties
 
 
 # Automatically scroll page to section which is under <!-- more --> mark.
-scroll_to_more: true
+scroll_to_more: false
 
 
 # Automatically Excerpt. Not recommand.
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: true
+  enable: false
   length: 500
 
 
