--- a/_config.yml
+++ b/_config.yml
@@ -65,9 +65,9 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 # theme: landscape
-theme: next
+# theme: next
 # theme: yelee
-# theme: maupassant
+theme: maupassant
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
