--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,8 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 # theme: landscape
-theme: next
+#theme: next
+theme: apollo
 # theme: yelee
 # theme: maupassant
 
