--- a/themes/apollo/_config.yml
+++ b/themes/apollo/_config.yml
@@ -1,8 +1,10 @@
 menu:
     Blog: /
     Archive: /archives/
-    Weibo: http://weibo.com/1999469107
+#    Weibo: http://weibo.com/1999469107
     GitHub: https://github.com/cgoder
+    SS: http://www.golss.ml
+    Taoke: http://www.mlmababa.com
 #    Rss: /atom.xml
 
 favicon: /favicon.png
