modify apollo theme

--- a/themes/apollo/_config.yml
+++ b/themes/apollo/_config.yml
@@ -3,7 +3,7 @@ menu:
     Archive: /archives/
 #    Weibo: http://weibo.com/1999469107
     GitHub: https://github.com/cgoder
-    SS: http://www.golss.ml
+    Golss: http://www.golss.ml
     Taoke: http://www.mlmababa.com
 #    Rss: /atom.xml
 
